<resources>
    <string name="app_name">orbital2019</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_intro">Intro</string>
    <string name="menu_login">Login</string>
    <string name="menu_tabs">Tabbed Bars</string>
    <string name="menu_register">Register</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string-array name="array_ingredients">
        <item>Butter</item>
        <item>Cabbage</item>
        <item>Carrot</item>
        <item>Chicken Breast</item>
        <item>Eggs</item>
        <item>Flour</item>
        <item>Lettuce</item>
        <item>Milk</item>
        <item>Onions</item>
        <item>Salmon</item>
        <item>Scallions</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_in_wait_message">Logging you in…</string>
    <string name="account_login">Account login</string>
    <string name="login_button_text">Login</string>
    <string name="forgot_password_text">Forgot Password?</string>
    <string name="welcome_message">Welcome to CookForYou, %1$s!</string>
    <string name="welcome_app_message">Welcome to\n Cook For You</string>
    <string name="new_user_message">New user?</string>
    <string name="register_button">Register</string>
    <string name="name_hint">Name</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="register_account_text">Register new account</string>
    <string name="results_loading_message">Cooking Recipes for You</string>
    <string name="nothing_found_message">Nothing found :(</string>
    <string name="no_favourites_message">No Favourites found :(</string>
    <string name="sort_item_title">Sort</string>
    <string name="query_item_title">Ingredients</string>
    <string name="most_popular_item_title">Most Popular</string>
    <string name="favourites_loading_text">Fetching favourites</string>
</resources>
