<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />


        <item
            android:id="@+id/nav_register"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_register" />
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_login" />
        <item
            android:id="@+id/nav_update_profile"
            android:icon="@drawable/ic_menu_gallery"
            android:title="Update Profile" />

        <item
            android:id="@+id/nav_favourite"
            android:icon="@drawable/ic_action_heart"
            android:title="Favourites"/>
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Logout" />

    </group>



</menu>
