<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    android:id="@+id/fragment_welcome_constraint_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/fragment_welcome_text"
        style="?android:attr/textAppearanceLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/welcome_app_message"
        android:textColor="@color/colorPrimary"
        android:textSize="40sp"
        android:textStyle="bold"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@id/fragment_welcome_chefhat_image"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <ImageView
        android:id="@+id/fragment_welcome_chefhat_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/chefhat"
        android:padding="16dp"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/fragment_welcome_text"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/fragment_welcome_guideline" />

    <Button
        android:id="@+id/fragment_welcome_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_button_text"
        app:layout_constraintBottom_toTopOf="@id/fragment_welcome_new_user"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_welcome_guideline"
        app:layout_constraintVertical_chainStyle="packed"
        android:padding="8dp" />

    <TextView
        android:id="@+id/fragment_welcome_new_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_user_message"
        android:padding="8dp"
        style="?android:attr/clickable"
        app:layout_constraintVertical_weight="0.2"
        app:layout_constraintTop_toBottomOf="@id/fragment_welcome_login_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.4" />

    <android.support.constraint.Guideline
        android:id="@+id/fragment_welcome_guideline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7"/>


</android.support.constraint.ConstraintLayout>